--- a/Anchor.toml
+++ b/Anchor.toml
@@ -12,8 +12,8 @@ spl_practice = "85geTUQkHkLGJULKAWs211TR3Exs5hbdjLV53zwZGL7q"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "~/.config/solana/id.json"
+cluster = "devnet"
+wallet = "~/.config/solana/devnet.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
